--- a/client/post.jade
+++ b/client/post.jade
@@ -2,18 +2,7 @@ template(name='post_view')
     with current_doc
         .ui.stackable.grid
             .row 
-                .four.wide.column
-                    a.ui.large.icon.basic.circular.button(href="/")
-                        i.chevron.left.large.icon
-                        i.big.heart.outline.icon
-                    | #{views} views
-                    +array_edit key='tags' label='tags' direct=true
-                    // +voting_full
-                    +link_view key='link' label='link' direct=true
-
-                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
-                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                .eight.wide.column.scrolling
+                .twelve.wide.column
                     if image_link
                         +image_link_view key='image_link' direct=true
                     if image_id
@@ -29,17 +18,16 @@ template(name='post_view')
                     .spacer
                     +comments
                     div
-                    .ui.inline.header 
-                        i.reply.icon
-                        |reflections
-                    .ui.circular.basic.large.button.add_reflection
-                        i.plus.icon
-                        |add
-                    div
-                    each reflections
-                        a.ui.small.header(href="/reflection/#{_id}/view")  #{title} !{content}
-                        .ui.divider
                 .four.wide.column
+                    a.ui.large.icon.basic.circular.button(href="/")
+                        i.chevron.left.large.icon
+                    | #{views} views
+                    +array_edit key='tags' label='tags' direct=true
+                    // +voting_full
+                    +link_view key='link' label='link' direct=true
+
+                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                     if can_edit 
                         a.ui.circular.icon.basic.button(href="/p/#{_id}/edit")
                             i.big.pencil.icon
