--- a/client/client.jade
+++ b/client/client.jade
@@ -33,44 +33,24 @@ head
 
 
 template(name='layout')
-    // +status
+    +status
     +nav
-    #main_area.global_container.pusher
-        +yield
+    .ui.bottom.attached.pushable.segment
+        // +topbar
+        +left_sidebar
+        +right_sidebar
+                
+        #main_area.global_container.pusher
+            +yield
     
-            
-template(name='nav')
-    .ui.fluid.attached.borderless.inverted.three.item.menu.hscroll
-        a.icon.item.clear(href="/" class="{{isActiveRoute regex='home'}}")
-            i.yin.yang.big.icon
-        a.icon.item.clear(href="/stats" class="{{isActiveRoute 'stats'}}")
-            i.line.chart.big.icon
-        if currentUser
-            if is_dev 
-                .icon.item
-                    i.code.icon
-            a.item(href="/u/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
-                if currentUser.profile_image_id
-                    if is_admin
-                        i.shield.icon(title='admin mode on')
-                    else
-                        img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                else 
-                    i.user.icon
-                strong.mobile.hidden #{currentUser.name}
-                |&nbsp;
-                |#{currentUser.points}p
-        else
-            // a.icon.item(href="/register" title='login')
-            //     i.user.plus.large.icon
-            a.icon.item(href="/login" title='login')
-                i.chevron.right.large.icon
-
-
+    // .ui.bottom.attached.pushable.segment
+    //     #main_area.pusher(class=currentUser.invert_class)
+    
 
             
 
 template(name='not_found')
     .ui.center.aligned.basic.segment
         a(href="/")
-            i.massive.heart.red.link.icon.pulse
+            i.massive.yin.yang.grey.link.icon.pulse
+
