--- a/parts/group.jade
+++ b/parts/group.jade
@@ -200,8 +200,8 @@
 //             // a.ui.header.zoomer(href="/g/#{group}/p/#{_id}") #{title}
 //             a.ui.left.aligned.inline.header.pointer.view_post.zoomer(class=emotion_color)
 //                 |#{title}
-//             span(title="made #{made_when}")
-//                 |{{made_when}}
+//             span(title="made #{when}")
+//                 |{{when}}
 //             if _author_username
 //                 a.ui.basic.label(href="/u/#{_author_username}")
 //                     i.large.user.outline.icon
