--- a/client/home.jade
+++ b/client/home.jade
@@ -158,7 +158,7 @@ template(name='home')
                             i.thumbs.up.link.outline.icon.upvote
                             |#{points}
                             i.thumbs.down.link.outline.icon.downvote
-                            |#{made_when}
+                            |#{when}
                             |!{content}
                             +voting_full
                             // .ui.tiny.icon.input
