--- a/parts/client/watson.jade
+++ b/parts/client/watson.jade
@@ -115,12 +115,12 @@ template(name='autotag')
             i.checkmark.icon
             
             
-// template(name='call_tone')
-//     button.ui.icon.large.button.call
-//         i.smile.icon
-//         // |call tone
-//     if page_doc.tone 
-//         i.checkmark.icon
+template(name='call_tone')
+    button.ui.icon.large.button.call
+        i.smile.icon
+        // |call tone
+    if page_doc.tone 
+        i.checkmark.icon
 //- 
 template(name='call_visual')
     #call_visual.ui.large.icon.button(title='analyze')
